--- a/content/index.adoc
+++ b/content/index.adoc
@@ -102,7 +102,7 @@ import (
 )
 
 func main() {
-        srv := ciigo.NewServer(":8080")
+        srv := ciigo.NewServer("./content", ":8080")
 
         srv.Start()
 }
