--- a/content/index.adoc
+++ b/content/index.adoc
@@ -1,8 +1,8 @@
 =  Welcome to ciigo
 :stylesheet: /assets/style.css
 
-`ciigo` is a program to write static web server with embedded files using
-generated markup format.
+`ciigo` is a library and a program to write static web server with embedded
+files using generated markup format.
 
 Currently, ciigo support
 https://asciidoctor.org/docs/what-is-asciidoc/[asciidoc]
@@ -11,7 +11,13 @@ https://commonmark.org/[markdown]
 as markup format.
 
 
-==  Document Structure
+==  ciigo as library
+
+This README explain how to use the ciigo as library.
+For ciigo as command line interface see
+
+
+===  Document Structure
 
 This software use the following directory structure and file name
 conventions,
@@ -30,10 +36,10 @@ conventions,
 *  `templates`: contains dynamic templates.  Currently. there is only single
    template: `html.tmpl`, that wrap the generated HTML.
 
-*  All markup files inside content must have an ".adoc" extension.
+*  All markup files inside content must have an ".adoc" or ".md" extension.
 
 
-==  Getting Started
+===  Getting Started
 
 This section describe step by step instructions on how to build and create
 pages to be viewed for local development using `ciigo`.
@@ -122,7 +128,9 @@ Hello, world!
 .  Run `go generate` to convert all files with extension `.adoc` (or `.md`)
    into HTML and embed it into `./cmd/mysite/static.go`
 +
-	$ go generate
+----
+$ go generate
+----
 
 .  Now run the `./cmd/mysite` with `DEBUG` environment variable is set,
 +
@@ -140,12 +148,12 @@ You should see "Hello, world!" as the main page.
 
 Thats it!
 
-Create or update any ".adoc" files in "content" directory, the program will
-automatically generated the HTML file, but you still need to refresh the web
-browser to load the new generated file.
+Create or update any ".adoc" or ",md" files inside "content" directory, the
+program will automatically generated the HTML file, but you still need to
+refresh the web browser to load the new generated file.
 
 
-==  Deployment
+===  Deployment
 
 First, we need to convert all markup files inside "content" into HTML and
 dump the content of all static files inside "content",
@@ -173,6 +181,34 @@ Finally, deploy the program to your server.
 
 *NOTE:* By default, server will listen on address `0.0.0.0` at port `8080`.
 If you need to use another port, you can change it at `cmd/mysite/main.go`.
+
+
+==  ciigo as CLI
+
+ciigo as CLI can convert, generate, and/or serve a directory that contains
+markup files, as HTML files.
+
+===  Usage
+
+	ciigo convert [-template <file>] <dir>
+
+Scan the "dir" recursively to find markup files (.adoc or .md) and
+convert them into HTML files.
+The template "file" is optional, default to "templates/html.tmpl" in
+the current directory.
+
+	ciigo generate [-template <file>] [-out <file>] <dir>
+
+Convert all markup files inside directory "dir" recursively and then
+embed them into ".go" source file.
+The output file is optional, default to "ciigo_static.go" in current
+directory.
+
+	ciigo serve [-template <file>] [-address <ip:port>] <dir>
+
+Serve all files inside directory "dir" using HTTP server, watch
+changes on markup files and convert them to HTML files automatically.
+If the address is not set, its default to ":8080".
 
 
 ==  Limitations and Known Bugs
