all: implement search functionality
The search function is available through internal API "/_internal/search"
with single parameter "q" that contains one or more words to search.

--- a/content/sub/index.adoc
+++ b/content/sub/index.adoc
@@ -1,4 +1,4 @@
 = Sub directory
-:stylesheet: /assets/style.css
+:stylesheet: /assets/custom.css
 
-This is an example of content in sub directory using the same stylesheet.
+This is an example of content in sub directory using custom stylesheet.
