all: rename the "content" directory to "_example"
While at it, also move the templates into _example and all assets
into the same directory.

--- a/_example/sub/index.adoc
+++ b/_example/sub/index.adoc
@@ -1,4 +1,4 @@
 = Sub directory
-:stylesheet: /assets/custom.css
+:stylesheet: /custom.css
 
 This is an example of content in sub directory using custom stylesheet.
