--- a/_example/sub/index.adoc
+++ b/_example/sub/index.adoc
@@ -1,4 +1,6 @@
 = Sub directory
+Second Author <m.shulhan@gmail.com>
+24 November 2020
 :stylesheet: /custom.css
 
 This is an example of content in sub directory using custom stylesheet.
