all: re-licensing ciigo under GPL-3.0 or later
See https://kilabit.info/journal/2022/gpl/ for more information.

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,4 +1,6 @@
-=  CHANGELOG
+// SPDX-FileCopyrightText: 2020 Shulhan <ms@kilabit.info>
+// SPDX-License-Identifier: GPL-3.0-or-later
+=  Changelog for ciigo
 
 ==  ciigo v0.7.1 (2022-01-10)
 
