--- a/_example/index.adoc
+++ b/_example/index.adoc
@@ -1,3 +1,5 @@
+// SPDX-FileCopyrightText: 2020 Shulhan <ms@kilabit.info>
+// SPDX-License-Identifier: GPL-3.0-or-later
 =  Welcome to ciigo
 Shulhan <ms@kilabit.info>
 25 September 2019
